<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <Button-->
    <!--        android:id="@+id/btnGetData"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:text="Button"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/textBookingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textBookingTitle"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textIn"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBookingTitle" />

    <TextView
        android:id="@+id/textOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/textOut"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDateOut"
        app:layout_constraintTop_toTopOf="@+id/textIn" />

    <TextView
        android:id="@+id/editTextDateIn"
        android:layout_width="108dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/textIn"
        app:layout_constraintTop_toTopOf="@+id/textIn" />

    <TextView
        android:id="@+id/editTextDateOut"
        android:layout_width="108dp"
        android:layout_height="33dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textIn" />

    <NumberPicker
        android:id="@+id/numberPickerRooms"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textRooms"
        app:layout_constraintTop_toBottomOf="@+id/textIn" />

    <NumberPicker
        android:id="@+id/numberPickerAdults"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textAdults"
        app:layout_constraintTop_toTopOf="@+id/numberPickerRooms" />

    <NumberPicker
        android:id="@+id/numberPickerChildren"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textChildren"
        app:layout_constraintTop_toTopOf="@+id/numberPickerAdults" />

    <TextView
        android:id="@+id/textRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textRooms"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textIn"
        app:layout_constraintTop_toTopOf="@+id/numberPickerRooms" />

    <TextView
        android:id="@+id/textAdults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:text="@string/textAdults"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/numberPickerRooms"
        app:layout_constraintTop_toTopOf="@+id/textRooms" />

    <TextView
        android:id="@+id/textChildren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:text="@string/textChildren"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/numberPickerAdults"
        app:layout_constraintTop_toTopOf="@+id/textRooms" />

    <TextView
        android:id="@+id/textViewDestiny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/textDestiny"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textRooms"
        app:layout_constraintTop_toBottomOf="@+id/numberPickerRooms" />

    <Spinner
        android:id="@+id/spinnerDestinyCities"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textViewDestiny"
        app:layout_constraintTop_toTopOf="@+id/textViewDestiny" />


</androidx.constraintlayout.widget.ConstraintLayout>